# dbt2looker

./: .gitignore  pyproject.toml  test.json
dbt2looker/: cli.py  generator.py  models.py  parser.py
example/: dbt_project.yml
